--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
     "uuid": "https://esm.sh/uuid@^13.0.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0"
+    "recharts": "https://esm.sh/recharts@^3.7.0",
+    "jsqr": "https://esm.sh/jsqr@^1.4.0"
   }
 }
 </script>
