--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     "react": "https://esm.sh/react@^19.2.4",
     "uuid": "https://esm.sh/uuid@^13.0.0",
     "recharts": "https://esm.sh/recharts@^3.7.0",
-    "jsqr": "https://esm.sh/jsqr@^1.4.0",
+    "html5-qrcode": "https://esm.sh/html5-qrcode@^2.3.8",
+    "xlsx": "https://esm.sh/xlsx@^0.18.5",
     "html2canvas": "https://esm.sh/html2canvas@^1.4.1"
   }
 }
@@ -52,7 +53,6 @@
       });
     }
 
-    // PWA Install Logic for App
     window.deferredPrompt = null;
     window.addEventListener('beforeinstallprompt', (e) => {
       e.preventDefault();
